--- a/package.json
+++ b/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "invoice-app",
   "version": "1.0.0",
@@ -16,6 +15,7 @@
     "vite-plugin-solid": "^2.8.2"
   },
   "dependencies": {
+    "@solidjs/router": "^0.11.3",
     "solid-js": "^1.8.11"
   }
 }
